--- a/app.json
+++ b/app.json
@@ -38,6 +38,13 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "O aplicativo precisa acessar suas fotos para anexar a etiqueta.",
+          "cameraPermission": "O aplicativo precisa acessar a câmera para fotografar a etiqueta."
+        }
       ]
     ],
     "experiments": {
