--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "StrategicCond",
     "slug": "strategiccond",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "strategiccond",
     "userInterfaceStyle": "automatic",
@@ -18,6 +18,7 @@
     "android": {
       "package": "com.strategicflow.strategiccond",
       "versionCode": 1,
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png"
@@ -32,8 +33,10 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
+      "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "description": "Sistema de Gestão e Notificação de Encomendas - StrategicCond"
     },
     "plugins": [
       "expo-router",
